cmake_minimum_required(VERSION 3.12)

add_library(TbMdlLib STATIC
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AddRemoveNodesCommand.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AddRemoveNodesUtils.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Autosaver.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/BasicShapes.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/BezierPatch.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Brush.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/BrushBuilder.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/BrushFace.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/BrushFaceAttributes.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/BrushFaceHandle.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/BrushFaceReader.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/BrushFaceReference.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/BrushNode.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/BrushRendererBrushCache.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/BrushVertexCommands.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/CircleShape.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ColorRange.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Command.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/CommandProcessor.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/CompareHits.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/CompilationConfig.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/CompilationProfile.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/CompilationTask.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/CurrentGroupCommand.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/DecalDefinition.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/DefParser.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EditorContext.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EmptyBrushEntityValidator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EmptyGroupValidator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EmptyPropertyKeyValidator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EmptyPropertyValueValidator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntParser.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Entity.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityColorPropertyValue.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityDefinition.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityDefinitionClassInfo.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityDefinitionFileSpec.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityDefinitionGroup.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityDefinitionManager.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityDefinitionParser.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityDefinitionUtils.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityLinkManager.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityModel.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityModelDataResource.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityModelManager.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityNode.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityNodeBase.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityProperties.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityPropertiesVariableStore.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityRotation.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EnvironmentConfig.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ExportOptions.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/FgdParser.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/GameConfig.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/GameConfigParser.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/GameEngineConfig.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/GameEngineConfigParser.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/GameEngineProfile.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/GameFileSystem.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/GameInfo.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/GameManager.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Grid.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Group.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/GroupNode.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Hit.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/HitAdapter.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/HitFilter.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/HitType.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ImageLoader.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ImageLoaderImpl.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/InvalidUVScaleValidator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Issue.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/IssueQuickFix.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/IssueType.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Layer.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LayerNode.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LegacyModelDefinitionParser.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkSourceValidator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkTargetValidator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkedGroupUtils.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadAseModel.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadAssimpModel.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadBspModel.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadDdsTexture.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadDkmModel.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadEntityDefinitions.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadEntityModel.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadFreeImageTexture.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadImageSpriteModel.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadM8Texture.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadMaterialCollections.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadMd2Model.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadMd3Model.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadMdlModel.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadMdxModel.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadMipTexture.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadShaders.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadSkin.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadSpriteModel.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadTexture.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LoadWalTexture.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LockState.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LongPropertyKeyValidator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/LongPropertyValueValidator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Map.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MapFileSerializer.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MapFormat.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MapHeader.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MapParser.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MapReader.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Map_Assets.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Map_Brushes.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Map_CopyPaste.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Map_Entities.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Map_Geometry.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Map_Groups.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Map_Layers.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Map_NodeLocking.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Map_NodeVisibility.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Map_Nodes.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Map_Picking.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Map_Selection.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Map_World.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MaterialUtils.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MissingClassnameValidator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MissingDefinitionValidator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MissingModValidator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MixedBrushContentsValidator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ModelDefinition.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ModelSpecification.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ModelUtils.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Node.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NodeContents.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NodeIndex.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NodeReader.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NodeSerializer.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NodeVisitor.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NodeWriter.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NonIntegerVerticesValidator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ObjSerializer.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Object.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Octree.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Palette.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ParallelUVCoordSystem.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ParaxialUVCoordSystem.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ParseCompilationConfig.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ParseModelDefinition.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/PatchNode.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/PickResult.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/PointEntityWithBrushesValidator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/PointTrace.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Polyhedron_Instantiation.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/PortalFile.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/PropertyDefinition.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/PropertyKeyWithDoubleQuotationMarksValidator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/PropertyValueWithDoubleQuotationMarksValidator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/PushSelection.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Quake3Shader.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Quake3ShaderParser.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ReparentNodesCommand.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/RepeatStack.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Selection.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/SelectionChange.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/SelectionCommand.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/SetCurrentLayerCommand.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/SetLinkIdsCommand.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/SetLockStateCommand.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/SetVisibilityCommand.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/SoftMapBounds.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/SoftMapBoundsValidator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/StandardMapParser.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/SwapNodeContentsCommand.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Tag.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/TagAttribute.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/TagManager.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/TagMatcher.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/TagVisitor.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Transaction.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/UVCoordSystem.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/UndoableCommand.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/UpdateBrushFaceAttributes.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/UpdateLinkedGroupsCommand.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/UpdateLinkedGroupsCommandBase.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/UpdateLinkedGroupsHelper.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Validator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ValidatorRegistry.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/VertexHandleManager.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/VisibilityState.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/WorldBoundsValidator.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/WorldNode.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/WorldReader.cpp
)

target_include_directories(TbMdlLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

target_link_libraries(TbMdlLib PRIVATE CompilerConfig PrecompileStdHeaders)
target_link_libraries(TbMdlLib PRIVATE tinyxml2::tinyxml2 miniz::miniz freeimage::FreeImage assimp::assimp fmt::fmt-header-only)
target_link_libraries(TbMdlLib PUBLIC KdLib TbBaseLib TbElLib TbFsLib TbGlLib)

add_subdirectory(test)
add_subdirectory(test-utils)
