cmake_minimum_required(VERSION 3.12)

add_library(TbUiLib STATIC)

target_sources(TbUiLib
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/src/AboutDialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/Action.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ActionBuilder.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ActionContext.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ActionExecutionContext.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ActionManager.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ActionMenu.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/Animation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/AppController.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/AppInfoPanel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/AssembleBrushTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/AssembleBrushToolController3D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/AutoSizeTableRows.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/BitmapButton.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/BorderLine.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/BorderPanel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CameraAnimation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CameraLinkHelper.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CameraTool2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CameraTool3D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CellLayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CellView.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ChoosePathTypeDialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ClickableLabel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ClickableTitleBar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ClipTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ClipToolController.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CollapsibleTitledPanel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ColorButton.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ColorModel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ColorTable.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ColorsPreferencePane.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CompilationContext.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CompilationDialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CompilationProfileEditor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CompilationProfileListBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CompilationProfileManager.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CompilationRun.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CompilationRunner.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CompilationTaskListBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CompilationVariables.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/Console.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ContainerBar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/Contracts.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ControlListBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CrashDialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CrashReporter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CreateBrushesToolBase.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CreateEntityTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CreateEntityToolController.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CurrentGameIndicator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/CyclingMapView.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/DialogButtonLayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/DialogHeader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/DrawShapeTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/DrawShapeToolController2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/DrawShapeToolController3D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/DrawShapeToolExtension.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/DrawShapeToolExtensions.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/DrawShapeToolPage.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/DropTracker.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/EdgeTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/EdgeToolController.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ElidedLabel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/EmptyWidget.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/EnableDisableTagCallback.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityBrowser.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityBrowserView.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityDefinitionFileChooser.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityInspector.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityPropertyEditor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityPropertyGrid.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityPropertyItemDelegate.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityPropertyModel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/EntityPropertyTable.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ExtrudeTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ExtrudeToolController.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/FaceAttribsEditor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/FaceInspector.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/FaceTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/FaceToolController.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/FileDialogDefaultDir.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/FileEventFilter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/FileLogger.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/FlagsEditor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/FlagsPopupEditor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/FlashSelectionAnimation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/FlyModeHelper.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/FormWithSectionsLayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/FourPaneMapView.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/GameDialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/GameEngineDialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/GameEngineProfileEditor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/GameEngineProfileListBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/GameEngineProfileManager.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/GameListBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/GamesPreferencePane.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/GestureTracker.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/GetVersion.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/GlQt.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/HandleDragTracker.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ImageListBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ImageUtils.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/InfoPanel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/InputEvent.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/InputState.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/Inspector.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/IssueBrowser.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/IssueBrowserView.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/KeySequenceEdit.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/KeyboardPreferencePane.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/KeyboardShortcutItemDelegate.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/KeyboardShortcutModel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/Lasso.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/LaunchGameEngine.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/LaunchGameEngineDialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/LayerEditor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/LayerListBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/LimitedKeySequenceEdit.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MapDocument.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MapInspector.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MapView.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MapView2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MapView3D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MapViewActivationTracker.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MapViewBar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MapViewBase.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MapViewContainer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MapViewToolBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MapWindow.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MapWindowManager.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MaterialBrowser.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MaterialBrowserView.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MaterialCollectionEditor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MiniToolBarLayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ModEditor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MousePreferencePane.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MoveHandleDragTracker.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MoveObjectsTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MoveObjectsToolController.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MultiCompletionLineEdit.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/MultiPaneMapView.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ObjExportDialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/OnePaneMapView.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/PickRequest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/PopupButton.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/PopupWindow.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/PreferenceDialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/PreferencePane.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/QColorUtils.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/QPathUtils.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/QPreferenceStore.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/QPreferenceStoreDelegate.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/QPreferenceStoreUtils.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/QStringUtils.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/QStyleUtils.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/QThreadUtils.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/QWidgetUtils.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/RecentDocumentListBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/RecentDocuments.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/RenderView.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ReplaceMaterialDialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/RotateHandle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/RotateTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/RotateToolController.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/RotateToolPage.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ScaleTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ScaleToolController.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ScaleToolPage.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/SearchBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/SelectionTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/SetBrushFaceAttributesTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ShearTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ShearToolController.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/SignalDelayer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/SliderWithLabel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/SmartChoiceEditor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/SmartColorEditor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/SmartDefaultPropertyEditor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/SmartFlagsEditor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/SmartPropertyEditor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/SmartPropertyEditorManager.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/SmartWadEditor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/SpinControl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/Splitter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/SwitchableMapViewContainer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/SwitchableTitledPanel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/SyncHeightEventFilter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/SystemPaths.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/TabBar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/TabBook.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/TextOutputAdapter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ThreePaneMapView.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/TitleBar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/TitledPanel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/Tool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ToolBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ToolBoxConnector.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ToolChain.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ToolController.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/TwoPaneMapView.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/UVCameraTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/UVEditor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/UVOffsetTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/UVOriginTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/UVRotateTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/UVScaleTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/UVShearTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/UVView.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/UVViewHelper.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/UpdateConfig.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/UpdatePreferencePane.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/UpdateVersion.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/VariableStoreModel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/VertexTool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/VertexToolController.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ViewConstants.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ViewEditor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ViewEffectsService.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ViewPreferencePane.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/ViewUtils.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/WelcomeWindow.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/WidgetState.cpp

  PUBLIC FILE_SET headers TYPE HEADERS
    BASE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include
    FILES
    # Cmake' automoc needs the header files to be added to the source files if they are in a separate folder
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/AboutDialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/Action.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ActionBuilder.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ActionContext.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ActionExecutionContext.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ActionManager.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ActionMenu.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/Animation.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/AppController.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/AppInfoPanel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/AssembleBrushTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/AssembleBrushToolController3D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/AutoSizeTableRows.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/BitmapButton.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/BorderLine.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/BorderPanel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CameraAnimation.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CameraLinkHelper.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CameraTool2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CameraTool3D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CellLayout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CellView.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ChoosePathTypeDialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ClickableLabel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ClickableTitleBar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ClipTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ClipToolController.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CollapsibleTitledPanel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ColorButton.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ColorModel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ColorTable.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ColorsPreferencePane.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CompilationContext.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CompilationDialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CompilationProfileEditor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CompilationProfileListBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CompilationProfileManager.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CompilationRun.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CompilationRunner.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CompilationTaskListBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CompilationVariables.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/Console.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ContainerBar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/Contracts.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ControlListBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CrashDialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CrashReporter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CreateBrushesToolBase.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CreateEntityTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CreateEntityToolController.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CurrentGameIndicator.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/CyclingMapView.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/DialogButtonLayout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/DialogHeader.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/DrawShapeTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/DrawShapeToolController2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/DrawShapeToolController3D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/DrawShapeToolExtension.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/DrawShapeToolExtensions.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/DrawShapeToolPage.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/DropTracker.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/EdgeTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/EdgeToolController.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ElidedLabel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/EmptyWidget.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/EnableDisableTagCallback.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/EntityBrowser.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/EntityBrowserView.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/EntityDefinitionFileChooser.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/EntityInspector.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/EntityPropertyEditor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/EntityPropertyGrid.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/EntityPropertyItemDelegate.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/EntityPropertyModel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/EntityPropertyTable.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ExtrudeTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ExtrudeToolController.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/FaceAttribsEditor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/FaceInspector.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/FaceTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/FaceToolController.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/FileDialogDefaultDir.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/FileEventFilter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/FileLogger.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/FlagsEditor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/FlagsPopupEditor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/FlashSelectionAnimation.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/FlyModeHelper.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/FormWithSectionsLayout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/FourPaneMapView.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/GameDialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/GameEngineDialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/GameEngineProfileEditor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/GameEngineProfileListBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/GameEngineProfileManager.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/GameListBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/GamesPreferencePane.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/GestureTracker.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/GetVersion.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/GlQt.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/HandleDragTracker.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ImageListBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ImageUtils.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/InfoPanel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/InputEvent.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/InputState.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/Inspector.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/IssueBrowser.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/IssueBrowserView.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/KeySequenceEdit.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/KeyboardPreferencePane.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/KeyboardShortcutItemDelegate.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/KeyboardShortcutModel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/Lasso.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/LaunchGameEngine.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/LaunchGameEngineDialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/LayerEditor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/LayerListBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/LimitedKeySequenceEdit.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MapDocument.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MapInspector.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MapView.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MapView2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MapView3D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MapViewActivationTracker.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MapViewBar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MapViewBase.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MapViewContainer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MapViewLayout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MapViewToolBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MapWindow.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MapWindowManager.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MaterialBrowser.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MaterialBrowserView.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MaterialCollectionEditor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MiniToolBarLayout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ModEditor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MousePreferencePane.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MoveHandleDragTracker.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MoveObjectsTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MoveObjectsToolController.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MultiCompletionLineEdit.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/MultiPaneMapView.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ObjExportDialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/OnePaneMapView.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/PickRequest.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/PopupButton.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/PopupWindow.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/PreferenceDialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/PreferencePane.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/QColorUtils.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/QPathUtils.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/QPreferenceStore.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/QPreferenceStoreDelegate.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/QPreferenceStoreUtils.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/QStringUtils.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/QStyleUtils.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/QThreadUtils.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/QVecUtils.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/QWidgetUtils.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/RecentDocumentListBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/RecentDocuments.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/RenderView.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ReplaceMaterialDialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/RotateHandle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/RotateTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/RotateToolController.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/RotateToolPage.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ScaleTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ScaleToolController.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ScaleToolPage.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/SearchBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/SelectionTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/SetBrushFaceAttributesTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ShearTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ShearToolController.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/SignalDelayer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/SliderWithLabel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/SmartChoiceEditor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/SmartColorEditor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/SmartDefaultPropertyEditor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/SmartFlagsEditor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/SmartPropertyEditor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/SmartPropertyEditorManager.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/SmartWadEditor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/SpinControl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/Splitter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/SwitchableMapViewContainer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/SwitchableTitledPanel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/SyncHeightEventFilter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/SystemPaths.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/TabBar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/TabBook.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/TextOutputAdapter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ThreePaneMapView.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/TitleBar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/TitledPanel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/Tool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ToolBox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ToolBoxConnector.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ToolChain.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ToolController.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/TwoPaneMapView.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/UVCameraTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/UVEditor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/UVOffsetTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/UVOriginTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/UVRotateTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/UVScaleTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/UVShearTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/UVView.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/UVViewHelper.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/UpdateConfig.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/UpdatePreferencePane.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/UpdateVersion.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/VariableStoreModel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/VertexTool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/VertexToolBase.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/VertexToolController.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/VertexToolControllerBase.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ViewConstants.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ViewEditor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ViewEffectsService.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ViewPreferencePane.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/ViewUtils.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/WelcomeWindow.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ui/WidgetState.h
  
  PRIVATE FILE_SET version_header TYPE HEADERS
    BASE_DIRS ${CMAKE_CURRENT_BINARY_DIR}/generated
)

target_link_libraries(TbUiLib PRIVATE
  CompilerConfig
  PrecompileQtHeaders
  PrecompileStdHeaders
)
target_link_libraries(TbUiLib PRIVATE
  KdLib
  Qt6::Network
  Qt6::OpenGL
  Qt6::OpenGLWidgets
  Qt6::Svg
  Qt6::Widgets
  TbBaseLib
  TbMdlLib
  TbPreferencesLib
  TbRenderLib
  UpdateLib
  VmLib
)

set_target_properties(TbUiLib PROPERTIES AUTOMOC TRUE)

# Create the cmake script for generating the version information
add_custom_target(TbUiLib_GenerateVersion ${CMAKE_COMMAND}
  -D UTILS="${CMAKE_SOURCE_DIR}/cmake/Utils.cmake"
  -D APP_BUILD_TYPE="${APP_BUILD_TYPE}"
  -D SRC="${CMAKE_CURRENT_SOURCE_DIR}/include/ui/Version.h.in"
  -D DST="${CMAKE_CURRENT_BINARY_DIR}/generated/ui/Version.h"
  -D GIT_EXECUTABLE="${GIT_EXECUTABLE}"
  -P "${CMAKE_CURRENT_SOURCE_DIR}/cmake/GenerateVersion.cmake")
add_dependencies(TbUiLib TbUiLib_GenerateVersion)

if(APPLE)
    # Silence macOS OpenGL deprecation warnings
    target_compile_definitions(TbUiLib PRIVATE GL_SILENCE_DEPRECATION)
endif()

add_subdirectory(test)
add_subdirectory(test-utils)
